JVMCI compilations need to be disabled until the module system is initialized

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 9
    • Affects Version/s: 9-repo-jigsaw
    • Component/s: hotspot
    • b115
    • Verified

      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/scratch/mchung/jigsaw/ws/jake-dev/hotspot/src/share/vm/jvmci/jvmciJavaClasses.cpp:73), pid=17110,
       tid=22275
      # assert(k != __null) failed: Could not find class Architecture
      #
      # JRE version: Java(TM) SE Runtime Environment (9.0) (build 9-internal+0-2015-12-08-160505.mlchung.jake-dev)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (9-internal+0-2015-12-08-160505.mlchung.jake-dev, mixed mode, tiered, jv
      mci, jvmci compiler, compressed oops, g1 gc, bsd-amd64)
      # No core dump will be written. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" befo
      re starting Java again
      #
      # If you would like to submit a bug report, please visit:
      # http://bugreport.java.com/bugreport/crash.jsp
      #

      --------------- S U M M A R Y ------------

      Command Line: -XX:+UnlockExperimentalVMOptions -XX:+EnableJVMCI -XX:+UseJVMCICompiler

      Host: mlchung-mac3, MacBookPro11,1 x86_64 3000 MHz, 4 cores, 16G, Darwin 14.3.0
      Time: Tue Dec 8 16:28:19 2015 PST elapsed time: 0 seconds (0d 0h 0m 0s)

      --------------- T H R E A D ---------------

      Current thread (0x00007fa7eb11f000): JavaThread "JVMCI CompilerThread1" daemon [_thread_in_vm, id=22275, stack(0x00000001287c0000,0x00000001288c0000)]


      Current CompileTask:
      JVMCI: 190 33 4 java.lang.String::isLatin1 (19 bytes)

      Stack: [0x00000001287c0000,0x00000001288c0000], sp=0x00000001288bf350, free space=1020k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.dylib+0xa3cb42] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x41c
      V [libjvm.dylib+0xa3d292] VMError::report_and_die(Thread*, char const*, int, char const*, char const*, __va_list_tag*)+0x4a
      V [libjvm.dylib+0x3c2de7] report_vm_error(char const*, int, char const*, char const*, ...)+0xc9
      V [libjvm.dylib+0x67d2a6] JVMCIJavaClasses::compute_offsets()+0x40
      V [libjvm.dylib+0x683bfc] JVMCIRuntime::initialize_well_known_classes(Thread*)+0x36
      V [libjvm.dylib+0x662dc0] JVMCICompiler::compile_method(methodHandle, int, JVMCIEnv*)+0x96
      V [libjvm.dylib+0x37434f] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x865
      V [libjvm.dylib+0x373792] CompileBroker::compiler_thread_loop()+0x38a
      V [libjvm.dylib+0x9de7eb] JavaThread::thread_main_inner()+0x175
      V [libjvm.dylib+0x9de535] JavaThread::run()+0x363

            Assignee:
            Christian Thalinger (Inactive)
            Reporter:
            Mandy Chung (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: