8144964: JVMCI compilations need to be disabled until the module system is initialized

Reviewed-by: kvn